renaming xordles to fibbles

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "xordle",
-  "name": "xordle",
+  "short_name": "fibble",
+  "name": "fibble",
   "icons": [
     {
       "src": "favicon.png",
