--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xordle",
+  "name": "fibble",
   "version": "0.1.0",
-  "homepage": "http://example.com/xordle/",
+  "homepage": "http://example.com/fibble/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -14,7 +14,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.2"
   },
