--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
     "typescript": "^4.5.5",
+    "use-long-press": "^2.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
