--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fibble",
   "version": "0.1.0",
-  "homepage": "http://example.com/fibble/",
+  "homepage": "https://fibble.xyz/",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,11 +12,10 @@
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.5.0",
     "@types/react-dom": "^17.0.11",
+    "react-calendar": "^3.7.0",    
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
-    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
     "typescript": "^4.5.5",
     "use-long-press": "^2.0.2",
     "web-vitals": "^2.1.2"
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
